push grammar task

--- a/views/partials/desktopNavT.ejs
+++ b/views/partials/desktopNavT.ejs
@@ -3,8 +3,8 @@
     <div class="liks">
         <a href="/teacher/" whtpg="students" class=""><i class="fa-solid fa-school"></i><span>students</span></a>
         <a href="/teacher/tasks" whtpg="tasks"><i class="fa-solid fa-list-check"></i><span>tasks</span></a>
-        <a href="/teacher/reports" whtpg="reports"><i class="fa-solid fa-chart-simple"></i><span>Reports</span></a>
-        <a href="/teacher/roadmap" whtpg="roadmap"><i class="fa-regular fa-map"></i><span>Roadmap</span></a>
+        <!-- <a href="/teacher/reports" whtpg="reports"><i class="fa-solid fa-chart-simple"></i><span>Reports</span></a> -->
+        <!-- <a href="/teacher/roadmap" whtpg="roadmap"><i class="fa-regular fa-map"></i><span>Roadmap</span></a> -->
         <a href="/teacher/meetings" whtpg="meetings"><i class="fa-solid fa-tower-broadcast"></i><span>Meetings</span></a>
     </div>
 </div>
