--- a/views/partials/phoneNavT.ejs
+++ b/views/partials/phoneNavT.ejs
@@ -1,7 +1,7 @@
 <nav class="mobileHeader is-flex is-justify-content-space-evenly">
     <a class="navbar-item mobileHide" href="/teacher/" whtpg="students"><i class="fa-solid fa-school"></i></a>
     <a class="navbar-item mobileHide" href="/teacher/tasks" whtpg="tasks"><i class="fa-solid fa-list-check"></i></a>
-    <a class="navbar-item mobileHide" href="/teacher/reports" whtpg="reports"><i class="fa-solid fa-chart-simple"></i></a>
-    <a class="navbar-item mobileHide" href="/teacher/roadmap" whtpg="roadmap"><i class="fa-regular fa-map"></i></a>
+    <!-- <a class="navbar-item mobileHide" href="/teacher/reports" whtpg="reports"><i class="fa-solid fa-chart-simple"></i></a> -->
+    <!-- <a class="navbar-item mobileHide" href="/teacher/roadmap" whtpg="roadmap"><i class="fa-regular fa-map"></i></a> -->
     <a class="navbar-item mobileHide" href="/teacher/meetings" whtpg="meetings"><i class="fa-solid fa-tower-broadcast"></i></a>
 </nav>
