--- a/views/student/roadmap.ejs
+++ b/views/student/roadmap.ejs
@@ -8,9 +8,10 @@
     <%- include('../partials/desktopNav.ejs') %>
 
     <div class="contentBox">
+
         <div class="lessonsPage">
             <div class="is-flex is-justify-content-space-between is-align-items-center">
-                <p class="label is-medium has-text-weight-medium has-text-grey">Current Roadmap</p>
+                <p class="label is-medium has-text-weight-medium has-text-grey">Roadmaps</p>
                 <div class="buttons is-margine-left">
                     <button class="button is-purpleGrade is-marginless-mins" workrole="showPopup" targeted="roadmapGeneratePop"><i class="fa-regular fa-square-plus" style="padding-right: 6px;"></i> New Roadmap</button>
                 </div>
@@ -29,40 +30,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <hr>
-        
-        <div class="lessonsPage">
-            <p class="label is-medium has-text-weight-medium has-text-grey">Previouse Roadmaps</p>
-            <div class="reportBoxes">
-
-                <div class="reportSection show">
-                    <div class="columns is-multiline">
-                        <div class="column is-3 reportData">
-                            <div class="reportBox">
-                                <p class="is-size-7">ID: 789204</p>
-                                <p class="is-size-6">Created At: <span>2023/5/20</span></p>
-                                <p class="is-size-6">Test Date: <span>2023/5/30</span></p>
-                                <p class="is-size-6">State: <span class="has-text-primary-dark">Finished</span></p>
-                            </div>
-                        </div>
-
-                        <div class="column is-3 reportData" style="display: none;">
-                            <div class="reportBox">
-                                <p class="is-size-7">ID: 789203</p>
-                                <p class="is-size-6">Created At: <span>2023/5/19</span></p>
-                                <p class="is-size-6">Test Date: <span>2023/5/30</span></p>
-                                <p class="is-size-6">State: <span class="has-text-danger-dark">Canceled</span></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="is-centered margintop-15">
-                <button class="button is-purpleGradedeg" loadPlace="">Show more</button>
             </div>
         </div>
 
