--- a/views/teacher/newtask.ejs
+++ b/views/teacher/newtask.ejs
@@ -95,13 +95,58 @@
                                 <thead>
                                     <tr>
                                         <td>Grammar</td>
-                                        <td class="td-small">Flag </td>
+                                        <td class="td-small">Flag</td>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     
                                 </tbody>
                             </table> 
+                        </div>
+                        <br>
+                        <div class="field">
+                            <label class="label has-text-weight-medium cus60">Choose Explanations Type</label>
+                            <div class="control">
+                                <div class="select is-fullwidth">
+                                    <select id="exType">
+                                        <option value="Short">Short</option>
+                                        <option value="Detailed">Detailed</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <label class="label has-text-weight-medium cus60">Add Examples?</label>
+                            <div class="control">
+                                <div class="select is-fullwidth">
+                                    <select id="exYn">
+                                        <option value="Yes">Yes</option>
+                                        <option value="No">No</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <label class="label has-text-weight-medium cus60">Add FAQ?</label>
+                            <div class="control">
+                                <div class="select is-fullwidth">
+                                    <select id="faq">
+                                        <option value="Yes">Yes</option>
+                                        <option value="No">No</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <label class="label has-text-weight-medium cus60">Add Resource URL?</label>
+                            <div class="control">
+                                <div class="select is-fullwidth">
+                                    <select id="url">
+                                        <option value="Yes">Yes</option>
+                                        <option value="No">No</option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
                         <br>
                         <p class="is-size-5 has-text-weight-medium cus60 has-text-centered is-hidden nota">Do you want to use these Grammars in the task?</p>
@@ -197,9 +242,9 @@
                     </div>
 
                     <div class="block is-hidden" taskis="resource">
-                        <h2 class="title is-4 has-text-centered cus80">Recommend a resource, Task</h2>
-                        <div class="columns">
-                            <div class="column is-half">
+                        <h2 class="title is-4 has-text-centered cus80">Grammar Task</h2>
+                        <div class="columns is-centered">
+                            <!-- <div class="column is-half">
                                 <div class="box">
                                     <h4 class="title is-55 has-text-centered cus60">Generate With LingBuddyAI</h4>
 
@@ -250,9 +295,9 @@
                                         <p info class="has-text-centered cus60"></p>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
 
-                            <div class="column is-half">
+                            <div class="column is-three-fifths">
                                 <div class="box">
                                     <div class="field">
                                         <label class="label has-text-weight-medium cus80">Put Recomendation URLs here or use <span class="cus60">LingBuddyAI</span> to generate them!</label>
