--- a/views/student/roadmap.ejs
+++ b/views/student/roadmap.ejs
@@ -115,11 +115,11 @@ Remember to allocate time each day for focused practice and review. Stay consist
                         <div class="control">
                             <div class="select is-fullwidth">
                                 <select id="improve" required>
+                                    <option value="Grammar">Grammar</option>
                                     <option value="Speaking">Speaking</option>
                                     <option value="Writing">Writing</option>
                                     <option value="Listening">Listening</option>
                                     <option value="Reading">Reading</option>
-                                    <option value="Speaking & Writing">Speaking & Writing</option>
                                     <option value="reading, speaking, writing & listening">All</option>
                                 </select>
                             </div>
@@ -133,7 +133,9 @@ Remember to allocate time each day for focused practice and review. Stay consist
                         </div>
                     </div>
 
+                    <p class="cus60 has-text-centered is-size-65">Overview & Reports Data will be used</p>
                     <br>
+                    
                     <div class="has-text-centered">
                         <button class="button is-purpleGradedeg" hideInterfBtn="1" targetInterf="2" id="generateRMbtn"><i class="fa-solid fa-terminal" style="font-size:12px; padding-right:5px"></i> Generate Roadmap</button>
                     </div>
